--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "postcss": "^8.2.14",
@@ -23,7 +24,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "recharts": "^2.0.9",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "use-query-params": "^1.2.2"
   },
   "devDependencies": {
     "prettier": "2.2.1"
