--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "pondjs": "^0.9.0",
     "postcss": "^8.2.14",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "recharts": "^2.0.9",
+    "react-timeseries-charts": "^0.16.1",
+    "react-vis": "^1.11.7",
     "tailwindcss": "^2.1.2",
     "use-query-params": "^1.2.2"
   },
