--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "moment": "^2.29.1",
     "pondjs": "^0.9.0",
     "postcss": "^8.2.14",
     "prop-types": "^15.7.2",
@@ -28,6 +29,7 @@
     "react-timeseries-charts": "^0.16.1",
     "react-vis": "^1.11.7",
     "tailwindcss": "^2.1.2",
+    "underscore": "^1.13.1",
     "use-query-params": "^1.2.2"
   },
   "devDependencies": {
